--- a/tags.html
+++ b/tags.html
@@ -5,6 +5,8 @@
 
 <p> This is a paragraph </p>
 
-<p> <i>This is an italic paragraph</i> <p>
+<p> <i>This is an italic paragraph</i> </p>
+
+<p> <b>This is a bold paragraph</b> </p>
 
 </html>
