modified tags.html. Added <ul> and <li> tags

--- a/tags.html
+++ b/tags.html
@@ -11,4 +11,10 @@
 
 <a href="http://www.google.com">Link to Google</a>
 
+<ul>
+  <li>is a</li>
+  <li>unordered list</li>
+  <li>This is</li>
+</ul>
+
 </html>
