modified tags.html file. Added <div> container with <h2>, <a> and <p> tags within

--- a/tags.html
+++ b/tags.html
@@ -23,4 +23,10 @@
 
 <img src="NJIT.jpg" />
 
+<div>
+  <h2>This is a div container</h2>
+  <a href="www.njit.edu">NJIT Website</a>
+  <p>Welcome to NJIT!</p>
+</div>
+
 </html>
