Modified index.html and added contact.html and about.html

--- a/html5-boilerplate/src/index.html
+++ b/html5-boilerplate/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Homepage</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,7 +20,16 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <!-- Header of the page -->
+        <h1>Home</h1>
+        <!-- Link to the Homepage -->
+        <a href="\html5-boilerplate\src\index.html"><b>Home</b></a>
+        <!-- Link to the About page -->
+        <a href="\html5-boilerplate\src\about.html"><b>About</b></a>
+        <!-- Link to the Contact page -->
+        <a href="\html5-boilerplate\src\contact.html"><b>Contact</b></a>
+        <!-- Content of the page -->
+        <p>Hello world! This is the home webpage.</p>
 
         <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
